--- a/index.html
+++ b/index.html
@@ -1,70 +1,70 @@
 <!DOCTYPE html>
 <html>
 <head> 
-<meta charset="utf-8"> 
-<title>Data Collect</title> 
-<script src="http://ajax.googleapis.com/ajax/libs/jquery/1.8.0/jquery.min.js"></script>
+    <meta charset="utf-8"> 
+    <title>Data Collect</title> 
+    <script src="./LIB/jquery.min.js"></script>
 </head>
 
 
 
 <body>
-    <video id = "player" src = '0001.mp4' controls="controls"  width='640' height='480'></video>
-    <img src="field.jpg" id="field" >
-    <div><button id = "pause" type="button">click</button></div>
-    <script>
-        $(document).ready(function(){
-            $("#player").on(
-                "timeupdate", 
-                function(event){
-                    onTrackedVideoFrame(this.currentTime, this.duration);
-                });
-            
-            $("#pause").on("click", function(){
-                let player = $("#player")[0];
-                if(player.paused){
-                    player.play()
-                }
-                else{
-                    player.pause()
-                }
-            })
-            $("#field").on("click",function(){
-                let player = $("#player")[0];
-                if(player.paused){
-                    setTimeout('player.play()', 500);
-                }
-                else{
-                    player.pause()
-                }
-                
-                mouseMove(event)
+<video id = "player" src = './Matches/Match0/0001.mp4' controls="controls"  width='640' height='480'></video>
+<img src="./SRC/field.jpg" id="field" >
+<div><button id = "pause" type="button">click</button></div>
+<script>
+    $(document).ready(function(){
+        $("#player").on(
+            "timeupdate",
+            function(event){
+                onTrackedVideoFrame(this.currentTime, this.duration);
+            });
 
-                function mouseMove(ev)
-                {
-                    Ev= ev || window.event;
-                    var mousePos = mouseCoords(ev);
-                    $("#xxx").text (((mousePos.x-680.5)/9).toFixed(1));
-                    $("#yyy").text (((mousePos.y-9.5)/6).toFixed(1));
-                }
-                function mouseCoords(ev)
-                {
-                    if(ev.pageX || ev.pageY){
-                        return {x:ev.pageX, y:ev.pageY};
-                    }
-                    return{
-                        x:ev.clientX + document.body.scrollLeft - document.body.clientLeft,
-                        y:ev.clientY + document.body.scrollTop - document.body.clientTop
-                    };
-                }
-            })
-        });
+        $("#pause").on("click", function(){
+            let player = $("#player")[0];
+            if(player.paused){
+                player.play()
+            }
+            else{
+                player.pause()
+            }
+        })
+        $("#field").on("click",function(){
+            let player = $("#player")[0];
+            if(player.paused){
+                setTimeout('player.play()', 500);
+            }
+            else{
+                player.pause()
+            }
 
-        function onTrackedVideoFrame(currentTime, duration){
-            $("#current").text(currentTime);
-            $("#duration").text(duration);
-        }
-    </script>
+            mouseMove(event)
+
+            function mouseMove(ev)
+            {
+                Ev= ev || window.event;
+                var mousePos = mouseCoords(ev);
+                $("#xxx").text (((mousePos.x-680.5)/9).toFixed(1));
+                $("#yyy").text (((mousePos.y-9.5)/6).toFixed(1));
+            }
+            function mouseCoords(ev)
+            {
+                if(ev.pageX || ev.pageY){
+                    return {x:ev.pageX, y:ev.pageY};
+                }
+                return{
+                    x:ev.clientX + document.body.scrollLeft - document.body.clientLeft,
+                    y:ev.clientY + document.body.scrollTop - document.body.clientTop
+                };
+            }
+        })
+    });
+
+    function onTrackedVideoFrame(currentTime, duration){
+        $("#current").text(currentTime);
+        $("#duration").text(duration);
+    }
+</script>
 <div id="current">0:00</div>
 <div id="duration">0:00</div>
 <div id="xxx">1</div>
