--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
         <script type="text/javascript" src="./LIB/d3.js"></script>
         <link href="./CSS/bootstrap.css" rel="stylesheet" />
         <script type="text/javascript" src="./LIB/bootstrap.min.js"></script>
-        <link href="./CSS/index.css" rel="stylesheet" />
+        <link href="./CSS/data_collector.css" rel="stylesheet" />
     </head>
 
 <body>
