fix a bug after reconstruct

--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
                         <div class="panel-body">
                             <div class="row box video_img_box">
                                 <div class="col-md-6 video_box" id="video">
-                                    <video id="videoplayer" src="./Matches/Match0/0001.mp4" controls="controls" width='100%'></video>
+                                    <video id="videoplayer" src="0001.mp4" controls="controls" width='100%'></video>
                                 </div>
                                 <div class="col-md-6 img_box" id="virtual_field">
                                     <img src="SRC/img/field.jpg" id="field" style="width:100%;"/>
