--- a/index.html
+++ b/index.html
@@ -3,6 +3,13 @@
     <head>
         <title>足球数据采集系统 / Soccer Data Collector</title>
         <meta charset="utf-8"/>
+        <script>
+            // 重命名 Electron 提供的 require
+            window.nodeRequire = require;
+            delete window.require;
+            delete window.exports;
+            delete window.module;
+        </script>
         <script type="text/javascript" src="./LIB/jquery.min.js"></script>
         <script type="text/javascript" src="./LIB/d3.js"></script>
         <link href="./CSS/bootstrap.css" rel="stylesheet" />
@@ -66,7 +73,7 @@
                         <div class="panel-body">
                             <div class="row box video_img_box">
                                 <div class="col-md-6 video_box" id="video">
-                                    <video id="videoplayer" src="0001.mp4" controls="controls" width='100%'></video>
+                                    <video id="videoplayer" src=".\Matches\Match0\0001.mp4" controls="controls" width='100%'></video>
                                 </div>
                                 <div class="col-md-6 img_box" id="virtual_field">
                                     <img src="SRC/img/field.jpg" id="field" style="width:100%;"/>
