--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
                         <div class="panel-body">
                             <div class="row box video_img_box">
                                 <div class="col-md-6 video_box" id="video">
-                                    <video id="videoplayer" src="0001.mp4" controls="controls" width='100%'></video>
+                                    <video id="videoplayer" src=".\Matches\Match0\0001.mp4" controls="controls" width='100%'></video>
                                 </div>
                                 <div class="col-md-6 img_box" id="virtual_field">
                                     <img src="SRC/img/field.jpg" id="field" style="width:100%;"/>
@@ -105,6 +105,25 @@
             <button id="btn_exit" type="button" class="btn btn-default">退出系统</button>
         </div>
     </div>
+
+    <div class="modal fade" id = "collector" tabindex="-1" role="dialog">
+        <div class="modal-dialog" role="document">
+            <div class="modal-content">
+                <div class="modal-header">
+                    <button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
+                    <h4 class="modal-title">Modal title</h4>
+                </div>
+                <div class="modal-body">
+
+                </div>
+                <div class="modal-footer">
+                    <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
+                    <button type="button" class="btn btn-primary">Save</button>
+                </div>
+            </div><!-- /.modal-content -->
+        </div><!-- /.modal-dialog -->
+    </div><!-- /.modal -->
+
     <script type="text/javascript" src="JS/p1_matchinfo.js"></script>
     <script type="text/javascript" src="JS/p2_playersinfo.js"></script>
     <script type="text/javascript" src="JS/p3_detailsinfo.js"></script>
