--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
         <script type="text/javascript" src="./LIB/d3.js"></script>
         <link href="./CSS/bootstrap.css" rel="stylesheet" />
         <script type="text/javascript" src="./LIB/bootstrap.min.js"></script>
+        <script type="text/javascript" src="./JS/error.js"></script>
         <link href="./CSS/data_collector.css" rel="stylesheet" />
     </head>
 
@@ -86,7 +87,7 @@
                     <div class="panel-heading">
                         <h3 class="panel-title">生成数据预览</h3>
                     </div>
-                    <div id="preview_text" class="panel-body">
+                    <div id="preview_text" class="panel-body preview_text">
 
                     </div>
                 </div>
