--- a/index.html
+++ b/index.html
@@ -111,7 +111,7 @@
             <div class="modal-content">
                 <div class="modal-header">
                     <button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
-                    <h4 class="modal-title">Modal title</h4>
+                    <h4 class="modal-title">细节数据</h4>
                 </div>
                 <div class="modal-body">
                     <div class="input-group">
@@ -150,7 +150,7 @@
                                 <span class="caret"></span>
                             </button>
                             <ul class="dropdown-menu" aria-labelledby="dropdownMenu-action">
-                                <li><a href="#">甲</a></li>
+                                
                             </ul>
                         </div>
                     </div>
@@ -162,7 +162,6 @@
                                 <span class="caret"></span>
                             </button>
                             <ul class="dropdown-menu" aria-labelledby="dropdownMenu-detail">
-                                <li><a href="#">甲</a></li>
                             </ul>
                             <button type="button" class="btn btn-primary" id="addAction">Add</button>
                         </div>
