--- a/index.html
+++ b/index.html
@@ -4,10 +4,12 @@
         <title>足球数据采集系统 / Soccer Data Collector</title>
         <meta charset="utf-8"/>
         <script type="text/javascript" src="./LIB/jquery.min.js"></script>
+        <script type="text/javascript" src="./LIB/FileSaver.js"></script>
         <script type="text/javascript" src="./LIB/d3.js"></script>
         <link href="./CSS/bootstrap.css" rel="stylesheet" />
         <script type="text/javascript" src="./LIB/bootstrap.min.js"></script>
         <script type="text/javascript" src="./JS/error.js"></script>
+        <script type="text/javascript" src="./JS/button_events.js"></script>
         <link href="./CSS/data_collector.css" rel="stylesheet" />
     </head>
 
@@ -51,7 +53,7 @@
                         </h4>
                     </div>
                     <div id="collapseTwo" class="panel-collapse collapse">
-                        <div class="panel-body">
+                        <div id="collapseTwoBody" class="panel-body">
                         </div>
                     </div>
                 </div>
@@ -81,6 +83,18 @@
                         </div>
                     </div>
                 </div>
+
+                <div class="btn-toolbar toolbar" role="toolbar">
+                    <div class="btn-group" role="group">
+                        <button id="btn_determine" type="button" class="btn btn-default" onclick="submitData()">确认提交</button>
+                    </div>
+                    <div class="btn-group" role="group">
+                        <button id="btn_clear" type="button" class="btn btn-default" onclick="clearAll()">清除所有</button>
+                    </div>
+                    <div class="btn-group" role="group">
+                        <button id="btn_exit" type="button" class="btn btn-default" onclick="exitSystem()">退出系统</button>
+                    </div>
+                </div>
             </div>
             <div class="col-md-3" id="json_preview">
                 <div class="panel panel-default">
@@ -95,17 +109,6 @@
         </div>
     </div>
 
-    <div class="btn-toolbar" role="toolbar">
-        <div class="btn-group" role="group">
-            <button id="btn_determine" type="button" class="btn btn-default">确认提交</button>
-        </div>
-        <div class="btn-group" role="group">
-            <button id="btn_clear" type="button" class="btn btn-default">清除所有</button>
-        </div>
-        <div class="btn-group" role="group">
-            <button id="btn_exit" type="button" class="btn btn-default">退出系统</button>
-        </div>
-    </div>
     <script type="text/javascript" src="JS/p1_matchinfo.js"></script>
     <script type="text/javascript" src="JS/p2_playersinfo.js"></script>
     <script type="text/javascript" src="JS/p3_detailsinfo.js"></script>
