fix selectID and saveAction

--- a/index.html
+++ b/index.html
@@ -188,6 +188,8 @@
         </div><!-- /.modal-dialog -->
     </div><!-- /.modal -->
 
+    <script type="text/javascript" src="JS/sequenceData.js"></script>
+
     <script type="text/javascript" src="JS/p1_matchinfo.js"></script>
     <script type="text/javascript" src="JS/p2_playersinfo.js"></script>
     <script type="text/javascript" src="JS/p3_detailsinfo.js"></script>
