--- a/index.html
+++ b/index.html
@@ -199,5 +199,19 @@
     <script type="text/javascript" src="JS/p3_detailsinfo.js"></script>
     <script type="text/javascript" src="JS/p4_preview.js"></script>
     <script type="text/javascript" src="JS/main.js"></script>
+    <script>
+        const {remote} = nodeRequire('electron')
+        const {Menu, MenuItem} = remote
+        
+        const menu = new Menu()
+        menu.append(new MenuItem({label: 'MenuItem1', click() { console.log('item 1 clicked') }}))
+        menu.append(new MenuItem({type: 'separator'}))
+        menu.append(new MenuItem({label: 'MenuItem2', type: 'checkbox', checked: true}))
+        
+        window.addEventListener('contextmenu', (e) => {
+          e.preventDefault()
+          menu.popup(remote.getCurrentWindow())
+        }, false)
+        </script>
 </body>
 </html>
