--- a/index.html
+++ b/index.html
@@ -75,16 +75,24 @@
                                     <img src="SRC/img/field.jpg" id="field" style="width:100%;"/>
                                 </div>
                             </div>
-                            <div class="list-group" id="phase-group">
-                                    <a class="list-group-item">添加阶段<span class="glyphicon glyphicon-plus" aria-hidden="true"></span></button>
+                            <div class="row box phases_actions_box">
+                                <div class="col-md-5 list-group" id="phase-group">
+                                    <a class="list-group-item">添加阶段<span class="glyphicon glyphicon-plus" aria-hidden="true"></span>
                                     </a>
+                                </div>
+                                <div class="col-md-5 list-group" id="actions-group">
+                                    <a class="list-group-item">动作列表
+                                        <!--<span class="glyphicon glyphicon-plus" aria-hidden="true"></span>-->
+                                    </a>
+                                </div>
                             </div>
 
-                            <div><button id = "pause" type="button">click</button></div>
-                            <div id="current">0.0</div>
-                            <div id="duration">0.0</div>
-                            <div id="xxx">1</div>
-                            <div id="yyy">1</div>
+
+                            <!--<div><button id = "pause" type="button">click</button></div>-->
+                            <!--<div id="current">0.0</div>-->
+                            <!--<div id="duration">0.0</div>-->
+                            <!--<div id="xxx">1</div>-->
+                            <!--<div id="yyy">1</div>-->
                         </div>
                     </div>
                 </div>
