--- a/index.html
+++ b/index.html
@@ -207,6 +207,7 @@
     <script type="text/javascript" src="JS/p3_detailsinfo.js"></script>
     <script type="text/javascript" src="JS/p4_preview.js"></script>
     <script type="text/javascript" src="JS/main.js"></script>
+    <script type="text/javascript" src="JS/model.js"></script>
     <script>
         const {remote} = nodeRequire('electron')
         const {Menu, MenuItem} = remote
