--- a/index.html
+++ b/index.html
@@ -80,17 +80,41 @@
                                 </div>
                                 <div class="col-md-6 img_box" id="virtual_field">
                                     <img src="SRC/img/field.jpg" id="field" style="width:100%;"/>
+                                    <div class="mengban">
+                                        <div class="assist_line_shu">1</div>
+                                        <div class="assist_line_shu">2</div>
+                                        <div class="assist_line_shu">3</div>
+                                        <div class="assist_line_shu">4</div>
+                                        <div class="assist_line_shu">5</div>
+                                        <div class="assist_line_shu">6</div>
+                                        <div class="assist_line_shu">7</div>
+                                        <div class="assist_line_shu">8</div>
+                                        <div class="assist_line_shu">9</div>
+                                    </div>
+                                    <div class="mengban">
+                                        <div class="assist_line_heng"><div class="occupy"></div><span class="left_text">1</span><span class="right_text">1</span></div>
+                                        <div class="assist_line_heng"><div class="occupy"></div><span class="left_text">2</span><span class="right_text">2</span></div>
+                                        <div class="assist_line_heng"><div class="occupy"></div><span class="left_text">3</span><span class="right_text">3</span></div>
+                                        <div class="assist_line_heng"><div class="occupy"></div><span class="left_text">4</span><span class="right_text">4</span></div>
+                                        <div class="assist_line_heng"><div class="occupy"></div><span class="left_text">5</span><span class="right_text">5</span></div>
+                                        <div class="assist_line_heng"><div class="occupy"></div><span class="left_text">6</span><span class="right_text">6</span></div>
+                                        <div class="assist_line_heng"><div class="occupy"></div><span class="left_text">7</span><span class="right_text">7</span></span></div>
+                                        <div class="assist_line_heng"><div class="occupy"></div><span class="left_text">8</span><span class="right_text">8</span></div>
+                                        <div class="assist_line_heng"><div class="occupy"></div><span class="left_text">9</span><span class="right_text">9</span></div>
+                                    </div>
                                 </div>
                             </div>
-                            <div class="row box phases_actions_box">
-                                <div class="col-md-5 list-group" id="phase-group">
-                                    <a class="list-group-item">添加阶段<span class="glyphicon glyphicon-plus" aria-hidden="true"></span>
-                                    </a>
-                                </div>
-                                <div class="col-md-5 list-group" id="actions-group">
-                                    <a class="list-group-item">动作列表
-                                        <!--<span class="glyphicon glyphicon-plus" aria-hidden="true"></span>-->
-                                    </a>
+                            <div class="container-fluid" style="margin-top:10px;">
+                                <div class="row box phases_actions_box">
+                                    <div class="col-md-5 list-group" id="phase-group">
+                                        <a class="list-group-item">添加阶段<span class="glyphicon glyphicon-plus" aria-hidden="true"></span>
+                                        </a>
+                                    </div>
+                                    <div class="col-md-5 list-group" id="actions-group">
+                                        <a class="list-group-item">动作列表
+                                            <!--<span class="glyphicon glyphicon-plus" aria-hidden="true"></span>-->
+                                        </a>
+                                    </div>
                                 </div>
                             </div>
 
